# NewWebassembly

./: .gitignore  example.cc  example.h  myclass_binding.cc
browser/: Readme.md  build.sh  example.js  example.wasm  index.html
n-api/: CMakeLists.txt  Readme.md  binding.gyp  build.sh  example.js  test.js
n-api/include/emscripten/: bind.h
n-api/src/: bind.cc  common.h
node/: Readme.md  build.sh  example.js  example.wasm  test.js
node-native/: binding.cc  myobject.cc  test.js
opencv.test/: bind.cc
